Time: 29 ms (73.09%), Space: 51.5 MB (59.76%) - LeetHub