@@ -1,18 +1,21 @@
 class Solution {
     public List<List<Integer>> threeSum(int[] nums) {
-        Arrays.sort(nums);
+
         List<List<Integer>> list = new ArrayList<>();
+        // Sort the array
+        Arrays.sort(nums);
+        //iterate thrpugh array once
+
         for(int i = 0; i < nums.length - 2; i++){
-            if(i > 0 && nums[i] == nums[i - 1]){
-                continue;
-            }
+            if(i > 0 && nums[i] == nums[i - 1]) continue;
             int left = i + 1;
             int right = nums.length - 1;
 
             while(left < right){
+                // int sum = nums[left] + nums[right] + nums[i];
                 if(nums[left] + nums[right] + nums[i] == 0){
-                    list.add(new ArrayList(Arrays.asList(nums[i], nums[left], nums[right])));
-
+                    List<Integer> temp = List.of(nums[i], nums[left], nums[right]);
+                    list.add(temp);
                     while(left < right && nums[left] == nums[left + 1]){
                         left++;
                     }
@@ -22,14 +25,16 @@ class Solution {
                     }
                     left++;
                     right--;
-                }
-                else if(nums[left] + nums[right] + nums[i] > 0){
-                    right--;
+                }else if(nums[left] + nums[right] + nums[i] > 0){
+                    while(left < right && nums[left] + nums[right] + nums[i] > 0){
+                        right--;
+                    }
                 }else{
-                    left++;
+                    while(left < right && nums[left] + nums[right] + nums[i] < 0){
+                        left++;
+                    }
                 }
-
-            }     
+            }
         }
         return list;
     }
